--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cartão Interativo</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="shortcut icon" href="images/favoicon.png" type="image/x-icon">
   <!-- o link para a biblioteca --> 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
